syntax = "proto3";

package remoteshell;

// Defines the service between client and server.
service RemoteCommand {
    // Sends a remote command from a client to a server.
    rpc SendCommand (CommandRequest) returns (CommandReply) {}
}

// Request message
message CommandRequest {
    string cmdName = 1;
    repeated string cmdArgs = 2;
}

// Response message
message CommandReply {
    string output = 1;
}